--- a/public/docketing_layout/index.html
+++ b/public/docketing_layout/index.html
@@ -15,24 +15,24 @@
   <title>AIPAIT</title>
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="{{asset('docketing_layout/css/bootstrap.css')}}" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Raleway:400,700&display=swap" rel="stylesheet">
   <!-- Custom styles for this template -->
-  <link href="{{asset('docketing_layout/css/style.css')}}" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="{{asset('docketing_layout/css/responsive.css')}}" rel="stylesheet" />
+  <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
 <body>
   <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
-      <div class="container">
+      <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
-
+             <img src="{{asset('logo/logo.png')}}" class="logo-icon" alt="logo icon">
           </a>
           <div class="navbar-collapse" id="">
             <ul class="navbar-nav justify-content-between ">
@@ -55,14 +55,10 @@
     <!-- end header section -->
     <!-- slider section -->
     <section class="slider_section ">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-md-4 offset-md-1">
             <div class="detail-box">
-				<div >
-				<img src="{{asset('logo/logo.png')}}" style="weight:50px;height:50px;" alt="logo icon">
-				<br>
-				</div>
               <h1>
                 <span>AIPAIT</span> <br>
                 Docketing<br>
@@ -71,23 +67,9 @@
               <p>
               </p>
               <div class="btn-box">
-			  @guest
-			   <a  href="{{route('login')}}"  class="btn btn-main">Login</a>
-                    @endguest
-                @auth
-				<a class="btn btn-main" href="/dashboard">Dashboard
-				</a>
-				<a class="btn btn-main" onclick="event.preventDefault();
-                    document.getElementById('nav-logout-form').submit()" 
-                    href="#">Logout</a>
-
-                <form id="nav-logout-form" action="{{ route('logout') }}" method="POST">
-                    @csrf
-                </form>
-                </li>
-                </ul>
-                 </li>
-                @endauth
+                <a href="" class="">
+                  Login
+                </a>
               </div>
             </div>
           </div>
@@ -96,9 +78,9 @@
     </section>
     <!-- end slider section -->
   </div>
-  <script type="text/javascript" src="{{asset('docketing_layout/js/jquery-3.4.1.min.js')}}"></script>
-  <script type="text/javascript" src="{{asset('docketing_layout/js/bootstrap.js')}}"></script>
-  <script type="text/javascript" src="{{asset('docketing_layout/js/custom.js')}}"></script>
+  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+  <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script type="text/javascript" src="js/custom.js"></script>
 
 
 </body>
