--- a/Register Page - Cl18.html
+++ b/Register Page - Cl18.html
@@ -305,3 +305,5 @@ if($total <= -7 ){
     <td style='color:white;background-color:green; font-size:12px;'>$post->created_at </td>
     ";	
 }	
+
+{{-- <img style='width: 40%' src="/storage/{{ $post->image ? $post->image->path : 'placeholders/thumbnail_placeholder.svg' }}" class='img-responsive' alt="Post Thumbnail"> --}}
